--- a/src/routes/Planet/Planet.module.css
+++ b/src/routes/Planet/Planet.module.css
@@ -72,7 +72,7 @@
     line-height: var(--lh-sm);
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: var(--space-base);
+    margin-bottom: var(--space-md);
   }
 
   p {
@@ -87,10 +87,7 @@
     align-items: flex-start;
     padding-inline: 0;
 
-    h1 {
-      text-align: start;
-      margin-bottom: var(--space-md);
-    }
+    h1,
     p {
       text-align: start;
     }
